[gd_scene load_steps=6 format=3 uid="uid://bnk5hessaqj4"]

[ext_resource type="Script" uid="uid://c5a38upmc8shv" path="res://Components/PlayerScene/PlayerScene/PlayerSceneControl.gd" id="1_sx2dm"]
[ext_resource type="PackedScene" uid="uid://cw1llcn6p3wy" path="res://Components/CORE/VideoRenderer/VideoRenderer.tscn" id="2_yu7rx"]
[ext_resource type="PackedScene" uid="uid://2t6qkx6baxyi" path="res://Components/CORE/AudioDecoder/AudioDecoder.tscn" id="3_fgpkj"]
[ext_resource type="PackedScene" uid="uid://rl20x4sogyk" path="res://Components/PlayerScene/SubtitleLayer/Subtitles.tscn" id="4_lnroo"]
[ext_resource type="PackedScene" uid="uid://bpuwn2vfuwf2s" path="res://Components/PlayerScene/UI/PlayerSceneUI.tscn" id="4_v2a7w"]

[node name="PlayerScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sx2dm")

[node name="VideoRenderer" parent="." instance=ExtResource("2_yu7rx")]
layout_mode = 1

[node name="AudioDecoder" parent="." instance=ExtResource("3_fgpkj")]

[node name="Subtitles" parent="." instance=ExtResource("4_lnroo")]
layout_mode = 1

[node name="PlayerSceneUI" parent="." instance=ExtResource("4_v2a7w")]
layout_mode = 1
